--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-    <div id="app">
-        <h1>Mood Tracker</h1>
+    <div id="opening-screen">
+        <h1 class="animated-title">Big Mood</h1>
+        <button id="start-tracking">Start Tracking</button>
+    </div>
+    <div id="app" style="display: none">
+        <h1>Big Mood</h1>
         <div id="month-navigation">
             <button id="prev-month">&lt;</button>
             <span id="current-month"></span>
@@ -29,8 +33,15 @@
             </select>
             <button id="save-mood">Save Mood</button>
         </div>
+        <div id="chart-navigation">
+            <button id="bar-chart-btn">Bar Chart</button>
+            <button id="line-chart-btn">Line Chart</button>
+            <button id="pie-chart-btn">Pie Chart</button>
+        </div>
         <div id="chart-container">
-            <canvas id="mood-chart"></canvas>
+            <canvas id="bar-chart"></canvas>
+            <canvas id="line-chart" style="display: none;"></canvas>
+            <canvas id="pie-chart" style="display: none;"></canvas>
         </div>
     </div>
     <script src="script.js"></script>
