--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Playwrite+PT:wght@100..400&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -16,6 +17,9 @@
 <body>
     <div id="opening-screen">
         <h1 class="animated-title">Big Mood</h1>
+        <div class="opening-text">
+            <p>Welcome to Big Mood! Track your daily moods and visualize your mood trends over time.</p>
+        </div>
         <button id="start-tracking">Start Tracking</button>
     </div>
     <div id="app" style="display: none">
