added dark mode toggle

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
 
 <body>
     <div id="opening-screen">
+        <!-- Add this toggle button in your HTML -->
+        <button id="dark-mode-toggle">Dark Mode</button>
         <h1 class="animated-title">Big Mood</h1>
         <div class="opening-text">
-            <p>Welcome to Big Mood! Track your daily moods and visualize your mood trends over time.</p>
+            <p>Track your daily moods and visualize your mood trends over time.</p>
         </div>
         <button id="start-tracking">Start Tracking</button>
     </div>
     <div id="app" style="display: none">
+        <!-- Add this toggle button in your HTML -->
+        <button id="dark-mode-toggle">Dark Mode</button>
         <h1>Big Mood</h1>
         <div id="month-navigation">
             <button id="prev-month">&lt;</button>
