--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap" rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playwrite+FR+Moderne:wght@100..400&display=swap"
+        rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
@@ -19,6 +26,7 @@
         <!-- Add this toggle button in your HTML -->
         <button id="dark-mode-toggle">Dark Mode</button>
         <h1 class="animated-title">Big Mood</h1>
+        <div id="at-night">After Dark</div>
         <div class="opening-text">
             <p>Track your daily moods and visualize your mood trends over time.</p>
         </div>
@@ -28,6 +36,7 @@
     <div id="app" style="display: none">
         <button id="dark-mode-toggle">Dark Mode</button>
         <h1 class="hero-text">Big Mood</h1>
+        <div id="at-night">After Dark</div>
         <div id="month-navigation">
             <button id="prev-month">&lt;</button>
             <span id="current-month"></span>
