--- a/index.html
+++ b/index.html
@@ -23,43 +23,118 @@
 
 <body>
     <div class="container" id="opening-screen">
-        <div class="cloud-container">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
-                <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud1">
-                    <path
-                        d="M 150 350 A  23 23 0 1 1 200 200 A  23 23 0 1 1 350 200 A  23 23 0 1 1 550 300 A  23 23 0 1 1 600 400 A  23 23 0 1 1 550 500 A  23 23 0 1 1 350 450 A  23 23 0 1 1 150 350 Z"
-                        stroke-linecap="round" stroke-linejoin="round"></path>
-                </g>
-            </svg>
+        <div class="cloud-container1">
+            <div class="cloud" id="cloud-container1">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+                    <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud1">
+                        <path
+                            d="M 150 350 A  23 23 0 1 1 200 200 A  23 23 0 1 1 350 200 A  23 23 0 1 1 550 300 A  23 23 0 1 1 600 400 A  23 23 0 1 1 550 500 A  23 23 0 1 1 350 450 A  23 23 0 1 1 150 350 Z"
+                            stroke-linecap="round" stroke-linejoin="round"></path>
+                    </g>
+                </svg>
+            </div>
+        </div>
+        <div class="cloud-container2">
+            <div class="cloud" id="cloud-container2">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+                    <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud2">
+                        <path
+                            d="M 184.5549738219895 440.0523560209424 A  23 23 0 1 1 183.24607329842934 285.86387434554973 A  23 23 0 1 1 350 200 A  23 23 0 1 1 564.6596858638743 194.24083769633506 A  23 23 0 1 1 635.6020942408377 329.84293193717275 A  23 23 0 1 1 550 500 A  23 23 0 1 1 443.19371727748694 502.3560209424084 A  23 23 0 1 1 184.5549738219895 440.0523560209424 Z"
+                            stroke-linecap="round" stroke-linejoin="round"></path>
+                    </g>
+                </svg>
+            </div>
+        </div>
 
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
-                <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud2">
-                    <path
-                        d="M 184.5549738219895 440.0523560209424 A  23 23 0 1 1 183.24607329842934 285.86387434554973 A  23 23 0 1 1 350 200 A  23 23 0 1 1 564.6596858638743 194.24083769633506 A  23 23 0 1 1 635.6020942408377 329.84293193717275 A  23 23 0 1 1 550 500 A  23 23 0 1 1 443.19371727748694 502.3560209424084 A  23 23 0 1 1 184.5549738219895 440.0523560209424 Z"
-                        stroke-linecap="round" stroke-linejoin="round"></path>
-                </g>
-            </svg>
+        <div class="cloud-container3">
+            <div class="cloud" id="cloud-container3">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+                    <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud3">
+                        <path
+                            d="M 500 400 A  23 23 0 1 1 300 350 A  23 23 0 1 1 250 300 A  23 23 0 1 1 350 250 A  23 23 0 1 1 500 200 A  23 23 0 1 1 600 250 A  23 23 0 1 1 500 400 Z"
+                            stroke-linecap="round" stroke-linejoin="round"></path>
+                    </g>
+                </svg>
+            </div>
+        </div>
 
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
-                <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud3">
-                    <path
-                        d="M 500 400 A  23 23 0 1 1 300 350 A  23 23 0 1 1 250 300 A  23 23 0 1 1 350 250 A  23 23 0 1 1 500 200 A  23 23 0 1 1 600 250 A  23 23 0 1 1 500 400 Z"
-                        stroke-linecap="round" stroke-linejoin="round"></path>
-                </g>
-            </svg>
+        <div class="cloud-container4">
+            <div class="cloud" id="cloud-container4">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+                    <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud4">
+                        <path
+                            d="M 200 300 A  23 23 0 1 1 250 250 A  23 23 0 1 1 400 250 A  23 23 0 1 1 600 350 A  23 23 0 1 1 650 450 A  23 23 0 1 1 600 550 A  23 23 0 1 1 400 500 A  23 23 0 1 1 200 300 Z"
+                            stroke-linecap="round" stroke-linejoin="round"></path>
+                    </g>
+                </svg>
+            </div>
+        </div>
 
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
-                <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud4">
-                    <path
-                        d="M 200 300 A  23 23 0 1 1 250 250 A  23 23 0 1 1 400 250 A  23 23 0 1 1 600 350 A  23 23 0 1 1 650 450 A  23 23 0 1 1 600 550 A  23 23 0 1 1 400 500 A  23 23 0 1 1 200 300 Z"
-                        stroke-linecap="round" stroke-linejoin="round"></path>
-                </g>
-            </svg>
-            <button id="dark-mode-toggle">Dark Mode</button>
+        <div class="cloud-container5">
+            <div class="cloud" id="cloud-container5">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+                    <g fill="#b8c0ffff" stroke-width="9" stroke="#000000ff" id="cloud5">
+                        <path
+                            d="M 250 350 A  50 50 0 1 1 300 200 A  50 50 0 1 1 450 200 A  50 50 0 1 1 550 300 A  50 50 0 1 1 400 400 A  50 50 0 1 1 250 350 Z"
+                            stroke-linecap="round" stroke-linejoin="round"></path>
+                    </g>
+                </svg>
+            </div>
+        </div>
+
+        <div class="cloud-container6">
+            <div class="cloud" id="cloud-container6">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+                    <g fill="#b8c0ffff" stroke-width="8" stroke="#000000ff" id="cloud">
+                        <path
+                            d="M 242.67015706806285 455.7591623036649 A  50 50 0 1 1 225.65445026178008 314.1361256544502 A  50 50 0 1 1 431.151832460733 234.55497382198956 A  50 50 0 1 1 558.3769633507854 292.67015706806285 A  50 50 0 1 1 451.3088877413286 450.26179480427845 A  50 50 0 1 1 242.67015706806285 455.7591623036649 Z"
+                            stroke-linecap="round" stroke-linejoin="round"></path>
+                    </g>
+                </svg>
+            </div>
+
+            <div class="cloud-container7">
+                <div class="cloud" id="cloud-container7">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+                        <g fill="#b8c0ffff" stroke-width="8" stroke="#000000ff" id="cloud">
+                            <path
+                                d="M 228.53403644661626 516.4921434013007 A  50 50 0 1 1 179.05759162303661 356.020942408377 A  50 50 0 1 1 307.06806282722516 248.16753926701568 A  50 50 0 1 1 458.90051748864937 185.8638815355551 A  50 50 0 1 1 612.5654450261779 345.54973821989523 A  50 50 0 1 1 550 500 A  50 50 0 1 1 439.00523560209433 533.7696335078534 A  50 50 0 1 1 228.53403644661626 516.4921434013007 Z"
+                                stroke-linecap="round" stroke-linejoin="round"></path>
+                        </g>
+                    </svg>
+                </div>
+            </div>
+
+            <div class="cloud-container8">
+                <div class="cloud" id="cloud-container8">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+                        <g fill="#b8c0ffff" stroke-width="8" stroke="#000000ff" id="cloud">
+                            <path
+                                d="M 608.9005369815527 395.81150410437454 A  50 50 0 1 1 379.5811508737934 446.335054567347 A  50 50 0 1 1 158.9005277943237 407.8534128878129 A  50 50 0 1 1 214.92146796581005 261.51832572577507 A  50 50 0 1 1 435.0785340314136 228.27225130890054 A  50 50 0 1 1 600 250 A  50 50 0 1 1 608.9005369815527 395.81150410437454 Z"
+                                stroke-linecap="round" stroke-linejoin="round"></path>
+                        </g>
+                    </svg>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="night-sky">
+            <div class="star" style="top: 10%; left: 20%;"></div>
+            <div class="star" style="top: 15%; left: 30%;"></div>
+        </div>
+        
+        <button id="dark-mode-toggle">Dark Mode</button>
+
+        <div class="content-container">
             <h1 class="animated-title">Big Mood</h1>
             <div id="at-night">After Dark</div>
             <div class="opening-text">
@@ -67,6 +142,7 @@
             </div>
             <button id="start-tracking">Start Tracking</button>
         </div>
+    </div>
 
     </div>
 
