fixed "after dark" toggle on opening screen

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="star" style="top: 15%; left: 30%;"></div>
         </div>
 
-        <button id="dark-mode-toggle">Dark Mode</button>
+        <button class="button-85" id="dark-mode-toggle">After Dark</button>
 
         <div class="content-container">
             <h1 class="animated-title">Big Mood</h1>
@@ -147,7 +147,7 @@
     </div>
 
     <div id="app" style="display: none">
-        <button id="dark-mode-toggle">Dark Mode</button>
+        <button class="button-85" id="dark-mode-toggle">After Dark</button>
         <h1 class="hero-text">Big Mood</h1>
         <div id="at-night">After Dark</div>
         <div id="month-navigation">
