adding stars to main app's "after dark" mode

--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
             <canvas id="line-chart" style="display: none;"></canvas>
             <canvas id="pie-chart" style="display: none;"></canvas>
         </div>
+        <div class="night-sky">
+            <div class="star" style="top: 10%; left: 20%;"></div>
+            <div class="star" style="top: 15%; left: 30%;"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
