trying to fix my dark mode toggle

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+    <div class="dark-mode-toggle">
+        <button class="button-85" id="dark-mode-toggle">☼</button>
+    </div>
     <div class="container" id="opening-screen">
         <div class="cloud-container1">
             <div class="cloud" id="cloud-container1">
@@ -132,8 +135,6 @@
             <div class="star" style="top: 15%; left: 30%;"></div>
         </div>
 
-        <button class="button-85" id="dark-mode-toggle">After Dark</button>
-
         <div class="content-container">
             <h1 class="animated-title">Big Mood</h1>
             <div id="at-night">After Dark</div>
@@ -147,7 +148,6 @@
     </div>
 
     <div id="app" style="display: none">
-        <button class="button-85" id="dark-mode-toggle">After Dark</button>
         <h1 class="hero-text">Big Mood</h1>
         <div id="at-night">After Dark</div>
         <div id="month-navigation">
